# cpp_codes

./: README.md  brain_fuck.cpp  build_asan  build_ubsan  false_sharing.cpp  iterator.cpp
asm/: asem.s
atoi/: atoi.cpp  atoi_1.cpp
concept/: concept.cpp  concept_print.cpp
crash/: crash.c  leak.cpp  notes
crtp/: crtp.cpp
cuda/: add.cu  test.cu
double/: fixed_double.hpp_back
double_peak/: bimodal_bench  bimodal_bench.cpp  bimodal_bench2  bimodal_bench2.cpp  plot_bimodal.py  plot_bimodal2.py
epoll_test/: epoll_test.cpp
features/: fold_expression.cpp
flat-map-perf/: README.md  benchmark.cpp
fold_expr/: fold_1.cpp  fold_expressions.cpp
frame_work/: CMakeLists.txt  strategy_notes
frame_work/src/: binance_depth.cpp  binance_depth.h  feed_handler.cpp  feed_handler.h  logging.cpp  logging.h  main.cpp  oms_risk.cpp  oms_risk.h  order_book.cpp  order_book.h  spsc_queue.h  strategy_shard.cpp  strategy_shard.h  trade_io.cpp  trade_io.h  types.h
grab_bag/: param_pack.cpp
hft_test/: CMakeLists.txt  README.md
hft_test/include/: hft_common.h  protocol.h  spsc_ring.h
hft_test/src/: hft_main.cpp  simex_server.cpp
mem_leak/: leak_demo.cpp
mem_order/: store_load.cpp
mmap/: mmap_two_threads.cpp
net/: busy_loop
others/: brain_fuck.cpp  iterator.cpp  print_type.cpp
param_pack/: homogeneous_param.cpp  param_pack.cpp  variadic_templates.cpp
perf_lab/: clock_gettime_compare.cpp  clock_jitter.cpp  malloc_compare.cpp  perf_lab.cpp  perf_lab_tp.h  rdtsc.cpp  rdtsc_2.cpp  test.c
rdtsc_test/: usage
rust_cpp/: Cargo.toml  md.cpp  md.rs  md2.cpp  md3.cpp  md4.cpp  md5.cpp  rust_cpp.txt
rust_cpp/src/: main.rs
snippets/: move.cpp
static_init_order/: build  build~  main_bad.cpp  static_lazy_good.cpp
std_function/: func.cpp
std_vector/: vec_1.cpp  vector_basic.cpp
stl/: array.cpp  build  build_asan  build_ubsan  map.cpp  pair.cpp  priority_queue.cpp  queue.cpp  set.cpp  span.cpp  stack.cpp  string.cpp  string_view.cpp  test_all  tuple.cpp  vector.cpp
template/: fib.cpp  idioms.cpp
(+25 files in other folders)
